--- a/README
+++ b/README
@@ -1,14 +1,12 @@
 A simple Sign Up and Sign In functionality.
 
-Frontend -  ReactJs.
-Backend - Node.js, Express, PostgreSQL server.
+Frontend - React.
+Backend - Node.js, Express server with databse PostgreSQL.
 
 Following things are remaining to be added,
 1.Edit Profile
 2.Validations
 3.Tests
-4.Applying responsive css
-5.Better UI with better css.
 
 
 
